--- a/Final_Code.ipynb
+++ b/Final_Code.ipynb
@@ -31,7 +31,7 @@
         "!wget https://github.com/xingchenzhao/deep-learning-team-project/raw/master/utils.pyx\n",
         "!wget https://github.com/xingchenzhao/deep-learning-team-project/raw/master/visualization.py\n",
         "!wget https://github.com/xingchenzhao/deep-learning-team-project/raw/master/generation.py\n",
-        "!wget https://transfer.sh/1U5VuHG/mutual_skeleton_medium.zip"
+        "!gdown --id 1YIFfZ-SQmwMxJxvvL01ysiYge8fZo6Xi"
       ],
       "execution_count": null,
       "outputs": [
